No more nicknames, usernames instead (fix #104) + right align chat messages

--- a/sass/chat.scss
+++ b/sass/chat.scss
@@ -36,10 +36,6 @@ livechat{
 .livechat-message-wrapper .date{
     font-size: 10px;
     color:lighten(black,20%);
-    text-align:left;
-}
-
-.sent .date{
     text-align:right;
 }
 
